BUG：github 部分截图显示不了，原因：本地图片 .png 和 .PNG 不区分大小，github 区分大小

--- a/手把手实现出海网站收款全流程/3、申请美国银行卡.md
+++ b/手把手实现出海网站收款全流程/3、申请美国银行卡.md
@@ -19,7 +19,7 @@
 👉 [Airwallex 空中云汇](https://www.airwallex.com/cn/signup)
 
 ### （2）开通流程
-<img src="../public/airwallex-signup.png" width="257px" height="461px" alt="注册空中云汇">
+<img src="../public/airwallex-signup.PNG" width="257px" height="461px" alt="注册空中云汇">
 
 ① 注册公司所属国家：美国
 
@@ -33,13 +33,13 @@
 
 ---
 
-<img src="../public/creat-airwallex-account.png" width="422px" height="464px" alt="创建空中云汇账号">
+<img src="../public/creat-airwallex-account.PNG" width="422px" height="464px" alt="创建空中云汇账号">
 
 选择开通“空中云汇”的用途，一般情况下，选择「收单、接收转账、多币种换汇」这 3 个就够了。
 
 ---
 
-<img src="../public/airwallex-checkout.png" width="508px" height="308px" alt="创建空中云汇账号">
+<img src="../public/airwallex-checkout.PNG" width="508px" height="308px" alt="创建空中云汇账号">
 
 ① **验证邮箱**：比较简单，点击进去，然后去验证就行了。
 
