--- a/手把手实现出海网站收款全流程/1、海外公司注册.md
+++ b/手把手实现出海网站收款全流程/1、海外公司注册.md
@@ -162,3 +162,15 @@ wyomingagents 是一家提供美国怀俄明州公司注册和管理服务的代
 需要注意的是，如果需要开通空中云汇的支付，那么请一定要**去注册英国公司**，我也是后来才知道的，美国公司申请不下来，除非你有美国身份。但是能够开通美国银行卡，有了银行卡就可以接收 Stripe 的支付了。
 
 在申请银行卡之前，需要先申请公司的 EIN，请前往 [2、申请EIN](./2、申请EIN.md)
+
+# 推荐一个国内的注册海外公司的代理机构
+- 地址：https://ingstart.com/
+
+
+我最近了解到这个平台，感觉挺有意思的。它主要是帮人在美国、香港、英国和新加坡这些地方注册公司，还提供一些合规和税务方面的服务。
+
+用起来好像挺方便的，你可以在网上注册账号，然后就能在线完成整个注册流程。他们还会帮你搞定代理地址和股东信息之类的事情。
+
+我觉得它的好处就是把所有事情都集中在一起了，管理起来也比较简单。而且它有中文服务，对咱们来说挺友好的，而且价格上也还比较友好，重点是： 省事！
+
+如果你对这个感兴趣的话，可以去他们网站上问问客服，应该能了解更多详细信息。总的来说，感觉是个还不错的选择，特别是对那些想在海外开公司但又不想太麻烦的人来说。
