修改错别字：查卡 -> 查看

--- a/手把手实现出海网站收款全流程/1、海外公司注册.md
+++ b/手把手实现出海网站收款全流程/1、海外公司注册.md
@@ -101,7 +101,7 @@ wyomingagents 是一家提供美国怀俄明州公司注册和管理服务的代
 
 ① **Email（电子邮件）**：这个步骤是注册 wyomingagents 网站的。填写自己最常用的邮箱即可。
 
-② **Password（密码）**：密码，一定要按照要求填写密码，密码要求比较复杂，自己保存好，别忘了，公司相关的文档都会保存在这个网站，方便随时查卡。
+② **Password（密码）**：密码，一定要按照要求填写密码，密码要求比较复杂，自己保存好，别忘了，公司相关的文档都会保存在这个网站，方便随时查看。
 - 密码必须至少8个字符
 - 密码必须包含至少一个大写字母
 - 密码必须包含至少一个数字
